fix orders/edit box spacing

--- a/app/cells/boutique/orders/edit/edit.sass
+++ b/app/cells/boutique/orders/edit/edit.sass
@@ -18,6 +18,9 @@ $white-beige: #F9F8F4 !default
     position: relative
     border-radius: 15px
 
+    &:first-child
+      margin-top: 0
+
     &:last-child
       margin-bottom: 0
 
